better validation of passed URL